# HydrowLand

./: .gitignore  README.md  index.html  package-lock.json  package.json  server.py  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  room.rs  server.rs
src-tauri/src/audio/: capture.rs  denoise.rs  encoder.rs  mixer.rs  mod.rs  playback.rs  realtime.rs  streaming.rs
src-tauri/src/commands/: audio.rs  audio_mesh.rs  mod.rs  room.rs  screen.rs  screen_stream.rs  server.rs  streaming.rs  webrtc.rs
src-tauri/src/screen/: capture.rs  mod.rs
src-tauri/src/video/: encoder.rs  mod.rs  track.rs
src-tauri/src/webrtc/: audio_mesh.rs  audio_track.rs  mesh_manager.rs  mod.rs  peer_connection.rs  signaling.rs
src/components/chat/: ChatPanel.tsx  SignalingModal.tsx
src/components/room/: RoomLobby.tsx  RoomView.tsx  UsernamePrompt.tsx
src/components/screen/: RemoteScreenViewer.tsx  ScreenPicker.tsx  ScreenShareButton.tsx  ScreenShareViewer.tsx  index.ts
src/components/server/: ServerLobby.tsx  ServerView.tsx
src/components/ui/: ConnectionIndicator.tsx  ThemeToggle.tsx  Toast.tsx  UpdateChecker.tsx  index.ts
src/components/voice/: AudioLevelMeter.tsx  VoiceControls.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: index.ts  useAudioStreaming.ts  useKeyboardShortcuts.ts  useToast.ts
src/pages/: ScreenViewerPage.tsx
src/services/: peerService.ts  screenViewerWindow.ts  tauriApi.ts  updateService.ts
src/stores/: roomStore.ts  serverStore.ts
src/types/: room.ts
