[package]
name = "hydrowland"
version = "0.1.0"
edition = "2021"

[lib]
name = "hydrowland_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2.x
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
rand = "0.8"
dirs = "5"

# WebRTC
webrtc = "0.11"
base64 = "0.22"

# Audio
cpal = "0.15"
opus = "0.3"
ringbuf = "0.4"
bytemuck = "1.14"

# Screen Capture (will be added in Phase 7)
# xcap = "0.0.14"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
